<resources>
    <string name="app_name">Laba2</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="authorization">Авторизация</string>
    <string name="log_in">Войти</string>
    <string name="sign_out">Выйти из аккаунта</string>

    <string name="welcome">Добро пожаловать, %1$s</string>
    <string name="warning_fill">Заполните</string>
    <string name="restore_pass">Забыли пароль? Восстановить</string>
    <string name="registration">Нет аккаунта? Зарегистрироваться</string>
    <string name="registration_title">Регистрация</string>
    <string name="confirm_password">Confirm password</string>
    <string name="e_mail">e-mail</string>
    <string name="your_phone">Your phone</string>
    <string name="name_optional">Name (Optional)</string>
    <string name="surname_optional">Surname (Optional)</string>
    <string name="sign_in">Зарегистрироваться</string>

    <string name="greeting">Приложение "Агрегатор хакатонов" является платформой для поиска и
        участия в хакатонах по всему миру. Оно предоставляет пользователю возможность быстро и
        легко находить информацию о проводимых мероприятиях, а также регистрироваться на них.
    </string>
    <string name="create_account">Создать аккаунт</string>
    <string name="have_acc_log_in">Есть аккаунт? Войти</string>
    <string name="list">List</string>
    <string name="calendar">Calendar</string>
    <string name="online">Онлайн</string>
    <string name="offline">Оффлайн</string>
    <string name="notification">Вызвать уведомление</string>

    <string name="channel_name">calendar_notify</string>
    <string name="channel_description">calendar_notify_desc</string>
    <string name="necessarily">Обязательно</string>
    <string name="login_exists">Логин уже занят</string>
    <string name="registration_data">Данные о регистрации:</string>
    <string name="languages">Языки:</string>
    <string name="format">Формат проведения:</string>
    <string name="share">Поделиться</string>
</resources>